try to better represent overlapping research interests addresses issue #3

--- a/css/style.css
+++ b/css/style.css
@@ -543,7 +543,7 @@ input[type="button"].small,
 }
 
 .wrapper.style5 {
-    background: darkred;
+    background: #555555;
     text-align: center;
     color: white;
 }
